# MCStatus

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.bat  build.sh  errors.c  errors.h  mcstatus.c  ms.h  packet.c  packet.h  packets.h  server_status.h
protocols/: chat_parser.c  chat_parser.h  java.c  java.h  legacy_java.c  mcstatus_result.h  protocols.h  tcp.c  tcp.h
utils/: chat_parser.c  chat_parser.h  ms.c  ms.h  tcp.c  text_converter.c  text_converter.h
